tests/rgs/syntax_errors/when_missing_event.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING ALWAYS:
    WHEN ENVIRONMENT:
        DO run.
